GNOME Bugzilla – Bug 711819
rtpbuffer: gst_rtp_buffer_ext_timestamp() returns wrong value when compiled with clang 5 on iOS/ARM
Last modified: 2013-11-13 19:16:00 UTC
Perhaps the problem is a race condition between rtspsrc and the pipeline going to PLAYING (or more specific: setting the base time)
Created attachment 259526 [details] client full log
Problem here seems that basesink waits for a time that is 26 hours in the future. This seems to be caused by rtpjitterbuffer putting a timestamp on buffers according to base-time 0, while later base-time is set to some large value when the pipeline goes to PLAYING. Or something like that. Later buffers seem to get a correct timestamp by rtpjitterbuffer.
commit 76985c5e81bd206439409ed8aa34aedb4ac47fce Author: Sebastian Dröge <sebastian@centricular.com> Date: Wed Nov 13 20:12:48 2013 +0100 rtpbuffer: Fix gst_rtp_buffer_ext_timestamp() with clang 5 on iOS/ARM The bitwise NOT operator is not defined on signed integers. Thanks to Wim Taymans for finding the cause. https://bugzilla.gnome.org/show_bug.cgi?id=711819