rtpbuffer: Fix gst_rtp_buffer_ext_timestamp() with clang 5 on iOS/ARM

The bitwise NOT operator is not defined on signed integers.
Thanks to Wim Taymans for finding the cause.

https://bugzilla.gnome.org/show_bug.cgi?id=711819